--- a/css/main.css
+++ b/css/main.css
@@ -179,6 +179,7 @@ aside .content-wrapper{
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  flex-direction: column;
 }
 .features p{
   margin: 0;
@@ -318,8 +319,12 @@ footer .content-wrapper{
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+@media only screen and (min-width: 768px){
+  /*----Tablet styles here------*/
+}
+
+@media only screen and (min-width: 1200px){
+  /*----Desktop styles here------*/
 }
 
 @media print,
