--- a/css/main.css
+++ b/css/main.css
@@ -100,81 +100,186 @@ textarea {
 
    /* General Styles */
  
-html {
-	font-size: 16px;
-}
- 
-body {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 1em;
+   html {
+    font-size: 16px;
+  }
+   
+  body {
+    font-size: 1em;
+    font-family: 'Open Sans', sans-serif;
+    color: #e2e3ed;
+    text-align: left;
+  }
+   
+  ul, 
+  ol {
+    list-style-type: none;
+  }
+   
+  a {
+    color: #e2e3ed;
+    text-decoration: none;
+  }
+   
+  h2 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: 1.875em;
+  }
+   
+  h3, 
+  h4 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    font-size: 1.125em;
+    margin: 20px 0;
+  }
+   
+  p {
+    font-size: .875em;
+    line-height: 1.285;
+  }
+   
+  img {
+   width: 100%;
+  }
+   
+  figure {
+   margin: 0;
+  }
+   
+  address {
+   font-style: normal;
+  }
+   
+  .content-wrapper {
+    width: 90%;
+    margin: 50px 0;
+  }
+
+/*---------------- Base Header - footer Styles --------------------*/
+
+header, footer {
+  background: #202322;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
-h1, h2, h3, h4, p{
+header {
+  padding: 15px 0;
+}
+
+header .content-wrapper{
+  margin: 0; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+.header-divider{
+  width: 100%;
+  height: 1px;
+  background: #3a3a3a;
+  margin: 10px 0 20px 0;
+}
+header nav{
+  width: 60%;
+  font-size: 1.125em;
+  font-weight: 700;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+}
+header nav ul{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+header nav ul li{
+  display: inline;
+  font-size: 1.125em;
+}
+header nav ul li a{
+  text-decoration: none;
+  font-weight: normal;
+  text-transform: uppercase;
   color: #ffffff;
 }
- 
-ul, 
-ol {
-  color: #e2e3ed;
-  text-decoration: none;
-}
- 
-a {
-	
-}
- 
-h1{
-  font-family: 'Poppins', sans-serif;
-  font-size: 2.5em;
-  line-height: 1.2;
-  font-weight: lighter;
-}
-h2 {
-  font-family: 'Poppins', sans-serif;
-}
- 
-h3, 
-h4 {
-  font-weight: lighter;
-  font-family: 'Poppins', sans-serif;
-}
-h3{
-  font-size: 1.5em;
-}
-h4{
-  font-size: 1.2em;
-}
- 
-p {
-	
-}
- 
-img {
- width: 100%
-}
- 
-figure {
- margin: 0;
-}
- 
-address {
- 
-}
- 
-.content-wrapper {
- 
+
+footer {
+  text-align: center;
+  flex-direction: column;
 }
 
-aside .form {
+footer p {
+  margin: 0;
+}
+
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0;
+}
+
+footer .contact {
+  margin-bottom: 50px;
+}
+
+footer .social-icons {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+footer .social-icons p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer .copyright {
+  margin: 20px 0;
+  width: 40%;
+}
+/*---------------- Mobile Styles - Homepage --------------------*/
+
+.hero-area {
+  min-height: 500px;
+  background-image: url("../img/jake-melara-30679-unsplash.png") ;
+  background-size:cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+
+}
+.hero-area h1{
+  width: 80%;
+  margin: 22px;
+  font-size: 2.25em;
+}
+
+aside{
+  background: #527158;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+.form {
   margin-top: 30px;
 }
- 
+
 input[type=text] {
   box-sizing: border-box;
   width: 100%;
   color: lightgrey;
   font-style: italic;
-  padding: 0 0 0 20px;
+  padding: 20px 0 20px 20px;
 }
  
 input[type=button] {
@@ -191,205 +296,79 @@ input[type=button] {
   text-transform: uppercase;
 }
 
-/*---------------- Base Header - footer Styles --------------------*/
-
-header, footer {
-  background: #202322;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
-}
-
-/* Header Styles */
-
-header {
-  padding: 15px 0;
-}
-
-header .content-wrapper{
-  margin: 0; 
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
-}
-.header-divider{
-  width: 100%;
-  height: 2px;
-  background: #999;
-  margin: 10px 0;
-}
-header nav{
-  width: 60%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-}
-header nav ul{
-  margin: 0;
-  padding: 0;
-}
-header nav ul li{
-  display: inline;
-  
-}
-header nav ul li a{
-  text-decoration: none;
-  font-weight: normal;
-  text-transform: uppercase;
-  color: #ffffff;
-  padding: 30px;
-}
-
-/*---------------- Mobile Styles - Homepage --------------------*/
-
-.hero-area {
-  height: 500px;
-  background-image: url("../img/jake-melara-30679-unsplash.png") ;
-  background-size:cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  padding: 54px 0;
-  display: flex;
-  justify-content: flex-start;
-
-}
-.hero-area h1{
-  width: 80%;
-  margin: 22px;
-}
-
-aside{
-  background: #527158;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
-  padding: 0 22px;
-}
-
-aside .content-wrapper{
-  padding: 22px 0 55px 22px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
-}
-
-.form-discription{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
-}
-
-.form {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-.form h3{
-  justify-content: flex-start;
-}
-#email{
-  margin: 0 0 10px 0;
-}
-#button{
- margin: 10px 0;
-}
-#email input, #button input{
-  height: 50px;
-  width: 400px;
-}
+/* features */
 
 .features{
   background-image: url("../img/rawpixel-800820-unsplash.png");
   background-size: cover;
-  background-position: bottom;
+  background-position: center;
   background-repeat: no-repeat;
-  padding: 56px 0 60px 0;
   display: flex;
   justify-content: center;
-  align-content: center;
   flex-flow: row wrap;
 }
-.features h3{
-  margin: 22px;
-  font-size: 2.5em;
-  width: 85%;
-}
-.features p{
-  margin: 0;
+.features h2{
+  margin-top: 60px;
 }
 
 .features article{
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  flex-flow: row wrap;
-  text-align: center;
   width: 55%;
-  margin: 55px 0;
+  margin: 30px 0;
 }
 
-.fontawesome-icon{
-  padding: 0 10px 35px 10px;
-}
-
-.features-item-description{
-  width: 80%;
-}
-
-.reviews{
-  background: #2a423a;
-  padding: 50px 22px;
+.features .features-items {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
 }
-.reviews h3{
-  width: 80%;
-  font-size: 2.2em;
-}
 
-.reviews h4{
-  width: 60%;
-  font-size: 1.5em;
-  font-weight: lighter;
-}
-
-/* Footer Styles */
-
-footer{
-
-}
-footer p{
+.features p {
+  text-align: center;
   margin: 0;
 }
 
-footer .content-wrapper{
-  width: 55%;
-  margin: 50px 0;
+/* Reviews */
+
+.reviews {
+  background-color: #2a423a;
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-flow: row wrap;
 }
 
-.contact{
-
+.reviews h2 {
+  margin-bottom: 40px;
+  line-height: 1;
 }
 
-.social{
-
+.reviews h3 {
+  width: 55%;
+  margin: 20px 0;
 }
-.copyright{
 
+
+/*---------------- Mobile Styles - About --------------------*/
+
+.map figure {
+  width: 100%;
+  height: 0; 
+  padding-bottom: 80%; 
+  overflow: hidden;
+  position: relative;
 }
+
+.map iframe {
+  width: 100%;
+  height: 100%;
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+}
+
+
+
+/*---------------- Mobile Styles - FAQ --------------------*/
 
 
 
@@ -485,156 +464,154 @@ footer .content-wrapper{
 @media only screen and (min-width: 768px){
   /*----Tablet styles here------*/
 
+  /* General styles */
   .content-wrapper {
     max-width: 640px;
     margin: 100px 0;
   }
 
-  /* ----- Header Styles ------*/
+  h2 {
+    font-size: 2.25em;
+    line-height: 1.333;
+  }
+
+  h3 {
+      font-size: 1.5em;
+      line-height: 1.25;
+  }
+
+  /* Header */
   header{
-    justify-content: ;
+    justify-content: space-around;
   }
   header .content-wrapper{
-    justify-content: ;
+    width: 100%
+    justify-content: space-between;
   }
   .header-divider{
     display: none;
   }
-  header nav{
-    justify-content: flex-end;
+  header figure {
+    width: 30%;
   }
-  header nav ul li a{
-    font-size: 1em;
-  }
-  
-  /* ----- Main Styles ------*/
 
-  .hero-area {
-    height: 600px;
+  header nav {
+    width: 20%;
   }
+
+  header nav ul {
+    justify-content: space-between;
+  }
+
+
+  /* Hero Area */
+  
   .hero-area h1{
     font-size: 3em;
-    width: 80%;
-    margin: 0 65px;
+    line-height: 1;
+    margin: 0;
   }
 
-  /* ----- Form Styles ------*/
-
-  aside{
-    padding: 0 65px;
-  }
-  
+  /* Aside */
   aside .content-wrapper{
     display: flex;
-    justify-content: flex-start;
-    align-items: baseline;
+    justify-content: space-between;
     flex-flow: row wrap;
-    padding: 0;
-  }
-  
-  .form-description{
-    width: 30%;
-  }
-  .form-description h3{
-    font-size: 1.5em;
-  }
-  .form-description p{
-    height: auto;
-    font-size: 1em;
-  }
-  
-  .form {
-    width: 30%;
-  }
-  .form h3{
-    font-size: 1.5em;
-    justify-content: flex-start;
-  }
-  #email, #button{
-   margin: 10px 0;
-  }
-  #email input, #button input{
-    height: 50px;
-    width: 250px;
+    margin: 50px 0;
   }
 
-  /* ----- Features Styles ------*/
+  aside .content-wrapper .form-description,
+  aside .content-wrapper .form {
+    width: 35%;
+    margin: 0;
+  }
 
-  .features{
-    padding: 56px 0 60px 0;
-    flex-direction: row;
+  /* Features */
+
+  .features h2{
+    margin: 0 20px 20px 0;
   }
-  .features h3{
-    justify-content: flex-start;
-    margin: 0 65px;
-    font-size: 3em;
-    
-  }
+
   .features p{
     margin: 0;
     font-size: .6em;
   }
   
   .features article{
-    flex-basis: ;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: row;
-    text-align: center;
-    font-size: 1.5em;
-    width: 30%;
+    flex-flow: column wrap;
+    flex-basis: 50%;
+  }
+  
+  .features .features-item-description {
+    width: 50%;
+  }
+  
+  /* Reviews */
+
+  .reviews article {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .reviews h2 {
+    width: 90%;
+  }
+
+  .reviews article figure,
+  .reviews article div {
+    width: 49%;
+  }
+
+  .reviews h3 {
+    width: 75%;
     margin: 0;
   }
-  
-  .fontawesome-icon{
-    padding: 0;
-  }
-  
-  /* ----- Review Styles ------*/
 
-  .reviews{
-    background: #2a423a;
-    padding: 50px 22px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-  }
-  .reviews h3{
-    width: 80%;
-    font-size: 2.5em;
-    
-  }
-  #group-photo{
-    width: 100%;
-  }
-  .reviews h4{
-    width: 170px;
-    font-size: 1.2em;
-  }
-
-  /* ----- Footer Styles ------*/
+  /* Footer */
 
   footer .content-wrapper {
-    width: ;
+    width: 65%;
     margin:  100px 0;
   }
 
-  .footer-content {
+  footer .footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+  }
+
+  footer .social-icons p{
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-content: center;
+    flex-flow: row wrap;
   }
 
   footer .contact {
       margin-bottom: 0;
   }
-
-  footer .copyright {
-      width: ;
+  
+  footer h4{
+    font-size: 1.5em;
+    margin-bottom: 40px;
   }
+
+  footer p {
+    line-height: 1.285;
 }
+
+footer .copyright {
+  width: 25%;
+}
+
+/*---------------- About Styles --------------------*/
+
+
+/*---------------- FAQ Styles --------------------*/
 
 
 /*------------------------------------------------------------------------------
@@ -679,39 +656,57 @@ footer .content-wrapper{
 
 
 @media only screen and (min-width: 1200px){
-  /*----Desktop styles here------*/
+/*----Desktop styles here------*/
+.content-wrapper {
+  max-width: 960px;
+}
 
-  .content-wrapper {
-    max-width: 960px;
+h2 {
+  font-size: 2.25em;
+}
+
+h3,
+h4 {
+    font-size: 1.875em;
+}
+
+p {
+    font-size: 1.125em;
+    line-height: 1.333;
 }
 
 /* Hero */
 .hero-area h1 {
-   width: ;
+  font-size: 3.75em;
+   width: 60%;
 }
 
 /* Aside */
 aside .content-wrapper {
-   justify-content: ;
+   justify-content: space-around;
 }
 
 aside .content-wrapper .form-description,
 aside .content-wrapper .form {
-   width: ;
+   width: 30;
+}
+
+.form-description p {
+  font-size: 1.125em;
 }
 
 /* Features */
 .features h2 {
-   width: ;
+   width: 70%;
 }
 
-.features article {
-   flex-basis: ;
+.features article{
+  flex-basis: 33%;
 }
 
 /* Reviews */ 
 .reviews article div {
-   width: ;
+  width: 42%;
 }
 
 
