made map responsive

--- a/css/main.css
+++ b/css/main.css
@@ -608,12 +608,6 @@ footer .copyright {
   width: 25%;
 }
 
-/*---------------- About Styles --------------------*/
-
-
-/*---------------- FAQ Styles --------------------*/
-
-
 /*------------------------------------------------------------------------------
     ABOUT PAGE
 ------------------------------------------------------------------------------*/
@@ -636,6 +630,10 @@ footer .copyright {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.map figure {
+  padding-bottom: 46%; 
 }
 
 /*------------------------------------------------------------------------------
@@ -721,6 +719,9 @@ aside .content-wrapper .form {
  
 .contact-section .content-wrapper h2 {
         margin-bottom: ;
+}
+.map figure {
+  padding-bottom: 38%; 
 }
 
 /*------------------------------------------------------------------------------
